# maplibre-native-qt

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  .qmake.conf  Build_Notes_Metal.md  Build_Notes_OpenGL.md  Build_Notes_Vulkan.md  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  README.md  codecov.yml  ds-store.sh  maplibregl.pro  quickmetal.qml  run_qml.sh  signing.sh
examples/minimal/: CMakeLists.txt  main.cpp  main.qml  minimal.pro
examples/quick/: CMakeLists.txt  CMakePresets.json  Info.plist.ios  ios-maplibre.pro  main.cpp  main.qml
examples/quick-standalone/: .qmake.stash  CMakeLists.txt  CMakePresets.ios.json  CMakePresets.json  Info.plist.ios  ios-quick.pro  main.cpp  main.qml  plugin_import.cpp  quick-ios.pro  simple-ios-main.cpp  simple.qml
examples/widgets/: CMakeLists.txt  CMakePresets.json  main.cpp  mainwindow.cpp  mainwindow.hpp  window.cpp  window.hpp
src/: CMakeLists.txt  config.cmake.in  qgeomapmaplibregl.cpp  qgeomapmaplibregl.h  qgeomapmaplibregl_p.h  qgeomappingmanagerenginemaplibregl.cpp  qgeomappingmanagerenginemaplibregl.h  qgeoserviceproviderpluginmaplibregl.cpp  qgeoserviceproviderpluginmaplibregl.h  qmaplibreglstylechange.cpp  qmaplibreglstylechange_p.h  qsgmaplibreglnode.cpp  qsgmaplibreglnode.h  version_info.rc.in
src/core/: CMakeLists.txt  config.cmake.in  conversion_p.hpp  core_qml_plugin.cpp  export.hpp  geojson.cpp  geojson_p.hpp  map.cpp  map.hpp  map_observer.cpp  map_observer_p.hpp  map_p.hpp  map_renderer.cpp  map_renderer_p.hpp  qmaplibre.hpp  renderer_backend.cpp  renderer_backend_p.hpp  renderer_observer_p.hpp  scheduler.cpp  scheduler_p.hpp  settings.cpp  settings.hpp  settings_p.hpp  types.cpp  types.hpp  utils.cpp  utils.hpp
src/core/rendering/: metal_renderer_backend.mm  metal_renderer_backend_p.hpp  opengl_renderer_backend.cpp  opengl_renderer_backend_p.hpp  renderer_backend_p.hpp  renderer_observer_p.hpp  vulkan_renderer_backend.cpp  vulkan_renderer_backend_p.hpp
src/core/style/: filter_parameter.cpp  filter_parameter.hpp  image_parameter.cpp  image_parameter.hpp  image_style_change.cpp  image_style_change_p.hpp  layer_parameter.cpp  layer_parameter.hpp  layer_style_change.cpp  layer_style_change_p.hpp  source_parameter.cpp  source_parameter.hpp  source_style_change.cpp  source_style_change_p.hpp  style_change.cpp  style_change_p.hpp  style_change_utils.cpp  style_change_utils_p.hpp  style_parameter.cpp  style_parameter.hpp
src/location/: CMakeLists.txt  config.cmake.in  macros.cmake  qgeomap.cpp  qgeomap.hpp  qgeomap_metal.hpp  qgeomap_metal.mm  qgeomap_opengl.cpp  qgeomap_opengl.hpp  qgeomap_p.hpp  qgeomap_vulkan.cpp  qgeomap_vulkan.hpp  qgeomapmaplibregl.cpp  qgeomapmaplibregl.h  qgeomapmaplibregl_p.h  qgeoserviceproviderpluginmaplibregl.cpp  qgeoserviceproviderpluginmaplibregl.h  qsgmaplibreglnode.h  qt_mapping_engine.cpp  qt_mapping_engine.hpp  rhi_texture_node.cpp  rhi_texture_node.hpp  rhi_texture_node.mm  rhi_texture_node_metal.mm  rhi_texture_node_opengl.cpp  rhi_texture_node_vulkan.cpp  style_change_utils.cpp  style_change_utils_p.hpp  stylechange.cpp  stylechange_p.h  texture_node.cpp  texture_node.hpp  texture_node_base.cpp  texture_node_base.hpp  texture_node_metal.hpp  texture_node_metal.mm  texture_node_opengl.cpp  texture_node_opengl.hpp  texture_node_vulkan.cpp  texture_node_vulkan.hpp
src/location/plugins/: CMakeLists.txt  declarative_filter_parameter.cpp  declarative_filter_parameter.hpp  declarative_image_parameter.cpp  declarative_image_parameter.hpp  declarative_layer_parameter.cpp  declarative_layer_parameter.hpp  declarative_source_parameter.cpp  declarative_source_parameter.hpp  declarative_style.cpp  declarative_style.hpp  declarative_style_parameter.hpp  maplibre_plugin.json  qgeoserviceproviderplugin.cpp  qgeoserviceproviderplugin.hpp  qml_types.hpp  qmldir.in
src/location/plugins/legacy/: qml_module.cpp  qml_registration.cpp  qmldir.in
src/platform/: qt.cmake
src/platform/src/mbgl/: async_task_impl.hpp  gl_functions.cpp  local_glyph_rasterizer.cpp  logging_qt.cpp  run_loop_impl.hpp  sqlite3.cpp  thread.cpp
src/platform/src/utils/: metal_renderer_backend.hpp  metal_renderer_backend.mm  opengl_renderer_backend.cpp  opengl_renderer_backend.hpp  vulkan_renderer_backend.cpp  vulkan_renderer_backend.hpp
src/platform/test/: main.cpp
src/quick/: CMakeLists.txt  export_quick_p.hpp  macros.cmake  maplibre_quick_item.hpp  maplibre_quick_item.mm  maplibre_quick_item_base.cpp  maplibre_quick_item_base.hpp  maplibre_quick_item_metal.hpp  maplibre_quick_item_metal.mm  maplibre_quick_item_opengl.cpp  maplibre_quick_item_opengl.hpp  maplibre_quick_item_vulkan.cpp  maplibre_quick_item_vulkan.hpp  plugin.cpp  plugin.json  texture_node_base.cpp  texture_node_base_p.hpp  texture_node_metal.mm  texture_node_metal_p.hpp  texture_node_opengl.cpp  texture_node_opengl_p.hpp  texture_node_vulkan.cpp  texture_node_vulkan_p.hpp
src/quick/plugins/: CMakeLists.txt  map_quick_item.cpp  map_quick_item.hpp  qmldir.in
src/widgets/: CMakeLists.txt  config.cmake.in  gl_widget.cpp  gl_widget.hpp  gl_widget_p.hpp  map_widget.cpp  map_widget.hpp  map_widget_p.hpp  qmaplibrewidgets.hpp  rhi_widget.cpp  rhi_widget.hpp  rhi_widget_p.hpp
test/: .clang-tidy  CMakeLists.txt
test/common/: test_rendering.cpp  test_rendering.hpp
test/core/: CMakeLists.txt  map_tester.cpp  map_tester.hpp  test_core.cpp
test/qml/: CMakeLists.txt  test_qml.cpp  tst_map.qml  tst_plugin_no_parameters.qml  tst_plugin_provider.qml  tst_plugin_style.qml  tst_style_parameters.qml
test/qml/qt5/: tst_map.qml  tst_plugin_style.qml  tst_style_parameters.qml
test/qml/qt6/: tst_map.qml  tst_plugin_no_parameters.qml  tst_plugin_provider.qml  tst_plugin_style.qml  tst_style_parameters.qml
test/quick/: CMakeLists.txt  test_quick.cpp  tst_map.qml
test/widgets/: CMakeLists.txt  gl_tester.cpp  gl_tester.hpp  main_window.cpp  main_window.hpp  map_widget_tester.cpp  map_widget_tester.hpp  map_window.cpp  map_window.hpp  test_main_window.cpp  test_main_window.hpp  test_widgets.cpp  test_window.cpp  test_window.hpp
(+354 files in other folders)
